20011217 Crypt-Tea-1.30 Tiny Encryption Algorithm in Perl & JavaScript
20020121 Crypt-Tea-1.31 some bugs fixed, Htauth hooks, outdated subs stripped
20020310 Crypt-Tea-1.32
20020325 Crypt-Tea-1.33 Bug fixed in JS ascii decoding
20020403 Crypt-Tea-1.34 Htauth hooks removed into CGI::Htauth.pm