@@ -1,0 +1,390 @@
+<HTML><HEAD><TITLE>test.html</TITLE>
+
+<SCRIPT LANGUAGE="JavaScript">
+<!--
+//        This JavaScript is Copyright (c) 2000, Peter J Billam
+//              c/o P J B Computing, www.pjb.com.au
+// It was generated by the Crypt::Tea.pm Perl module and is free software;
+// you can redistribute and modify it under the same terms as Perl itself.
+
+// -------------- stuff used by CGI::Htauth.pm , q.v. ------------------
+// This resides in a parent frameset; the subframe htauth_frame0 contains
+// the hidden form htauth_form0 which is used to submit things; the subframe
+// htauth_frame1 covers most of the screen and displays the application.
+// The global variable remember_htauth_p contains the encryption key.
+
+function decrypt_and_write(ascii) {
+ htauth_frame1.document.write(decrypt(ascii, remember_htauth_p));
+ htauth_frame1.document.close();
+}
+keep_in_plaintext = new Object();  // to preserve pre-authenticated app vars
+keep_in_plaintext['htauth_u'] = true;
+keep_in_plaintext['htauth_r'] = true;
+keep_in_plaintext['htauth_t'] = true;
+function respond_and_login(form) {
+ remember_htauth_p   = form.htauth_p.value;  // global
+ htauth_frame0.document.htauth_form0.htauth_r.value =
+  asciidigest(form.htauth_c.value + remember_htauth_p);
+ var bg = htauth_frame1.document.bgColor;
+ htauth_frame0.document.htauth_form0.submit();
+ return '<BODY BGCOLOR="' + bg +
+  '"><CENTER>One moment please . . .</CENTER></BODY>';
+}
+
+function encrypt_and_submit(form) { // nb: javascript: url passes the frame
+ var plaintext = '';
+ for (var i=0; i<form.length; i++) {
+  var e = form.elements[i];
+  if (! keep_in_plaintext[e.name]) {
+   plaintext += (e.name + "\0" +  e.value + "\0");
+  }
+ }
+ htauth_frame0.document.htauth_form0.htauth_r.value = '';
+ htauth_frame0.document.htauth_form0.htauth_t.value =
+  encrypt(plaintext, remember_htauth_p);
+ htauth_frame0.document.htauth_form0.submit();
+ var bg = htauth_frame1.document.bgColor;
+ return '<BODY BGCOLOR="' + bg +
+  '"><CENTER>One moment please . . .</CENTER></BODY>';
+}
+
+// -- conversion routines between string, bytes, ascii encoding, & blocks --
+function binary2ascii (s) {
+ return bytes2ascii( blocks2bytes(s) );
+}
+function binary2str (s) {
+ return bytes2str( blocks2bytes(s) );
+}
+function ascii2binary (s) {
+ return bytes2blocks( ascii2bytes(s) );
+}
+function str2binary (s) {
+ return bytes2blocks( str2bytes(s) );
+}
+function str2bytes(s) {   // converts string to array of bytes
+ var is = 0;  var ls = s.length;  var b = new Array();
+ while (1) {
+  if (is >= ls) break;
+  if (c2b[s.charAt(is)] == null) { b[is] = 0xF7;
+alert ('is = '+is + '\nchar = '+s.charAt(is) + '\nls = '+ls);
+  } else { b[is] = c2b[s.charAt(is)];
+  }
+  is++;
+ }
+ return b;
+}
+function bytes2str(b) {   // converts array of bytes to string
+ var ib = 0;  var lb = b.length;  var s = '';
+ while (1) {
+  if (ib >= lb) break;
+  s += b2c[0xFF&b[ib]];   // if its like perl, could be faster with join
+  ib++;
+ }
+ return s;
+}
+function ascii2bytes(a) { // converts pseudo-base64 to array of bytes
+ var ia = -1;  var la = a.length;
+ var ib = 0;  var b = new Array();
+ var carry;
+ while (1) {   // reads 4 chars and produces 3 bytes
+  while (1) { ia++; if (ia>=la) return b; if (a2b[a[ia]] != null) break; }
+  b[ib]  = a2b[a[ia]]<<2;
+  while (1) { ia++; if (ia>=la) return b; if (a2b[a[ia]] != null) break; }
+  carry=a2b[a[ia]];  b[ib] |= carry>>>4; ib++;
+  // if low 4 bits of carry are 0 and its the last char, then break
+  carry = 0xF & carry;
+  if (carry == 0 && ia == (la-1)) return b;
+  b[ib]  = carry<<4;
+  while (1) { ia++; if (ia>=la) return b; if (a2b[a[ia]] != null) break; }
+  carry=a2b[a[ia]];  b[ib] |= carry>>>2; ib++;
+  // if low 2 bits of carry are 0 and its the last char, then break
+  carry = 03 & carry;
+  if (carry == 0 && ia == (la-1)) return b;
+  b[ib]  = carry<<6;
+  while (1) { ia++; if (ia>=la) return b; if (a2b[a[ia]] != null) break; }
+  b[ib] |= a2b[a[ia]];   ib++;
+ }
+ return b;
+}
+function bytes2ascii(b) { // converts array of bytes to pseudo-base64 ascii
+ var ib = 0;   var lb = b.length;  var s = '';
+ var b1; var b2; var b3;
+ var carry;
+ while (1) {   // reads 3 bytes and produces 4 chars
+  if (ib >= lb) break;   b1 = 0xFF & b[ib];
+  s += b2a[077 & (b1>>>2)];
+  carry = 03 & b1;
+  ib++;  if (ib >= lb) { s += b2a[carry<<4]; break; }  b2 = 0xFF & b[ib];
+  s += b2a[(0xF0 & (carry<<4)) | (b2>>>4)];
+  carry = 0xF & b2;
+  ib++;  if (ib >= lb) { s += b2a[carry<<2]; break; }  b3 = 0xFF & b[ib];
+  s += b2a[(074 & (carry<<2)) | (b3>>>6)] + b2a[077 & b3];
+  ib++;
+  if (ib % 36 == 0) s += "\n";
+ }
+ return s;
+}
+function bytes2blocks(bytes) {
+ var blocks = new Array(); var ibl = 0;
+ var iby = 0; var nby = bytes.length;
+ while (1) {
+  blocks[ibl]  = (0xFF & bytes[iby])<<24; iby++; if (iby >= nby) break;
+  blocks[ibl] |= (0xFF & bytes[iby])<<16; iby++; if (iby >= nby) break;
+  blocks[ibl] |= (0xFF & bytes[iby])<<8;  iby++; if (iby >= nby) break;
+  blocks[ibl] |=  0xFF & bytes[iby];      iby++; if (iby >= nby) break;
+  ibl++;
+ }
+ return blocks;
+}
+function blocks2bytes(blocks) {
+ var bytes = new Array(); var iby = 0;
+ var ibl = 0; var nbl = blocks.length;
+ while (1) {
+  if (ibl >= nbl) break;
+  bytes[iby] = 0xFF & (blocks[ibl] >>> 24); iby++;
+  bytes[iby] = 0xFF & (blocks[ibl] >>> 16); iby++;
+  bytes[iby] = 0xFF & (blocks[ibl] >>> 8);  iby++;
+  bytes[iby] = 0xFF & blocks[ibl]; iby++;
+  ibl++;
+ }
+ return bytes;
+}
+function digest_pad (bytearray) {
+ // add 1 char ('0'..'15') at front to specify no of \0 pad chars at end
+ var newarray = new Array();  var ina = 0;
+ var iba = 0; var nba = bytearray.length;
+ var npads = 15 - (nba % 16); newarray[ina] = npads; ina++;
+ while (iba < nba) { newarray[ina] = bytearray[iba]; ina++; iba++; }
+ var ip = npads; while (ip>0) { newarray[ina] = 0; ina++; ip--; }
+ return newarray;
+}
+function pad (bytearray) {
+ // add 1 char ('0'..'7') at front to specify no of rand pad chars at end
+ // unshift and push fail on Netscape 4.7 :-(
+ var newarray = new Array();  var ina = 0;
+ var iba = 0; var nba = bytearray.length;
+ var npads = 7 - (nba % 8);
+ newarray[ina] = (0xF8 & rand_byte()) | (07 & npads); ina++;
+ while (iba < nba) { newarray[ina] = bytearray[iba]; ina++; iba++; }
+ var ip = npads; while (ip>0) { newarray[ina] = rand_byte(); ina++; ip--; }
+ return newarray;
+}
+function rand_byte() {   // used by pad
+ return Math.floor( 256*Math.random() );  // Random needs js1.1 . Seed ?
+ // for js1.0 compatibility, could try following ...
+ if (! rand_byte_already_called) {
+  var now = new Date();  seed = now.milliseconds;
+  rand_byte_already_called = true;
+ }
+ seed = (1029*seed + 221591) % 1048576;  // see Fortran77, Wagener, p177
+ return Math.floor(seed / 4096);
+}
+function unpad (bytearray) {
+ // remove no of pad chars at end specified by 1 char ('0'..'7') at front
+ // unshift and push fail on Netscape 4.7 :-(
+ var iba = 0;
+ var newarray = new Array();  var ina = 0;
+ var npads = 0x7 & bytearray[iba]; iba++; var nba = bytearray.length - npads;
+ while (iba < nba) { newarray[ina] = bytearray[iba]; ina++; iba++; }
+ return newarray;
+}
+
+// --- TEA stuff, translated from the Perl Tea.pm see www.pjb.com.au/comp ---
+
+// In JavaScript we express an 8-byte block as an array of 2 32-bit ints
+function asciidigest (str) {
+ return binary2ascii( binarydigest(str) );
+}
+function binarydigest (str, keystr) {  // returns 22-char ascii signature
+ var key = new Array(); // key = binarydigest(keystr);
+ key[0]=0x61626364; key[1]=0x62636465; key[2]=0x63646566; key[3]=0x64656667;
+
+ // Initial Value for CBC mode = "abcdbcde". Retain for interoperability.
+ var c0 = new Array(); c0[0] = 0x61626364; c0[1] = 0x62636465;
+ var c1 = new Array(); c1 = c0;
+
+ var v0 = new Array(); var v1 = new Array(); var swap;
+ var blocks = new Array(); blocks = bytes2blocks(digest_pad(str2bytes(str))); 
+ var ibl = 0;   var nbl = blocks.length;
+ while (1) {
+  if (ibl >= nbl) break;
+  v0[0] = blocks[ibl]; ibl++; v0[1] = blocks[ibl]; ibl++;
+  v1[0] = blocks[ibl]; ibl++; v1[1] = blocks[ibl]; ibl++;
+  // cipher them XOR'd with previous stage ...
+  c0 = tea_code( xor_blocks(v0,c0), key );
+  c1 = tea_code( xor_blocks(v1,c1), key );
+  // mix up the two cipher blocks with a 32-bit left rotation ...
+  swap=c0[0]; c0[0]=c0[1]; c0[1]=c1[0]; c1[0]=c1[1]; c1[1]=swap;
+ }
+ var concat = new Array();
+ concat[0]=c0[0]; concat[1]=c0[1]; concat[2]=c1[0]; concat[3]=c1[1];
+ return concat;
+}
+function encrypt (str,keystr) {  // encodes with CBC (Cipher Block Chaining)
+ if (! keystr) { alert("encrypt: no key"); return false; }
+ var key = new Array();  key = binarydigest(keystr);
+ if (! str) return "";
+ var blocks = new Array(); blocks = bytes2blocks(pad(str2bytes(str)));
+ var ibl = 0;  var nbl = blocks.length;
+ // Initial Value for CBC mode = "abcdbcde". Retain for interoperability.
+ var c = new Array(); c[0] = 0x61626364; c[1] = 0x62636465;
+ var v = new Array(); var cblocks = new Array();  var icb = 0;
+ while (1) {
+  if (ibl >= nbl) break;
+  v[0] = blocks[ibl];  ibl++; v[1] = blocks[ibl];  ibl++;
+  c = tea_code( xor_blocks(v,c), key );
+  cblocks[icb] = c[0]; icb++; cblocks[icb] = c[1]; icb++;
+ }
+ return binary2ascii(cblocks);
+}
+function decrypt (ascii, keystr) {   // decodes with CBC
+ if (! keystr) { alert("decrypt: no key"); return false; }
+ var key = new Array();  key = binarydigest(keystr);
+ if (! ascii) return "";
+ var cblocks = new Array(); cblocks = ascii2binary(ascii);
+ var icbl = 0;  var ncbl = cblocks.length;
+ // Initial Value for CBC mode = "abcdbcde". Retain for interoperability.
+ var lastc = new Array(); lastc[0] = 0x61626364; lastc[1] = 0x62636465;
+ var v = new Array(); var c = new Array();
+ var blocks = new Array(); var ibl = 0;
+ while (1) {
+  if (icbl >= ncbl) break;
+  c[0] = cblocks[icbl];  icbl++;  c[1] = cblocks[icbl];  icbl++;
+  v = xor_blocks( lastc, tea_decode(c,key) );
+  blocks[ibl] = v[0];  ibl++;  blocks[ibl] = v[1];  ibl++;
+  lastc[0] = c[0]; lastc[1] = c[1];
+ }
+ return bytes2str(unpad(blocks2bytes(blocks)));
+}
+function xor_blocks(blk1, blk2) { // xor of two 8-byte blocks
+ var blk = new Array();
+ blk[0] = blk1[0]^blk2[0]; blk[1] = blk1[1]^blk2[1];
+ return blk;
+}
+function tea_code (v, k) {
+ // TEA. 2-int (64-bit) cyphertext block in v. 4-int (128-bit) key in k.
+ var v0  = v[0]; var v1 = v[1];
+ var k0  = k[0]; var k1 = k[1]; var k2 = k[2]; var k3 = k[3];
+ var sum = 0; var n = 32;
+ while (n-- > 0) {
+  sum += 0x9e3779b9;  // TEA magic number
+  v0 += ((v1<<4)+k0) ^ (v1+sum) ^ ((v1>>>5)+k1) ;
+  v1 += ((v0<<4)+k2) ^ (v0+sum) ^ ((v0>>>5)+k3) ;
+ }
+ var w = new Array(); w[0] = v0; w[1] = v1; return w;
+}
+function tea_decode (v, k) {
+ // TEA. 2-int (64-bit) cyphertext block in v. 4-int (128-bit) key in k.
+ var v0 = v[0]; var v1 = v[1];
+ var k0 = k[0]; var k1 = k[1]; var k2 = k[2]; var k3 = k[3];
+ var sum = 0; var n = 32;
+ sum = 0x9e3779b9 << 5 ;  // TEA magic number
+ while (n-- > 0) {
+  v1 -= ((v0<<4)+k2) ^ (v0+sum) ^ ((v0>>>5)+k3) ;
+  v0 -= ((v1<<4)+k0) ^ (v1+sum) ^ ((v1>>>5)+k1) ;
+  sum -= 0x9e3779b9 ;
+ }
+ var w = new Array(); w[0] = v0; w[1] = v1; return w;
+}
+
+// ------------- assocarys used by the conversion routines -----------
+c2b = new Object();
+c2b["\000"]=0000; c2b["\001"]=0001; c2b["\002"]=0002; c2b["\003"]=0003;
+c2b["\004"]=0004; c2b["\005"]=0005; c2b["\006"]=0006; c2b["\007"]=0007;
+c2b["\010"]=0010; c2b["\011"]=0011; c2b["\012"]=0012; c2b["\013"]=0013;
+c2b["\014"]=0014; c2b["\015"]=0015; c2b["\016"]=0016; c2b["\017"]=0017;
+c2b["\020"]=0020; c2b["\021"]=0021; c2b["\022"]=0022; c2b["\023"]=0023;
+c2b["\024"]=0024; c2b["\025"]=0025; c2b["\026"]=0026; c2b["\027"]=0027;
+c2b["\030"]=0030; c2b["\031"]=0031; c2b["\032"]=0032; c2b["\033"]=0033;
+c2b["\034"]=0034; c2b["\035"]=0035; c2b["\036"]=0036; c2b["\037"]=0037;
+c2b["\040"]=0040; c2b["\041"]=0041; c2b["\042"]=0042; c2b["\043"]=0043;
+c2b["\044"]=0044; c2b["\045"]=0045; c2b["\046"]=0046; c2b["\047"]=0047;
+c2b["\050"]=0050; c2b["\051"]=0051; c2b["\052"]=0052; c2b["\053"]=0053;
+c2b["\054"]=0054; c2b["\055"]=0055; c2b["\056"]=0056; c2b["\057"]=0057;
+c2b["\060"]=0060; c2b["\061"]=0061; c2b["\062"]=0062; c2b["\063"]=0063;
+c2b["\064"]=0064; c2b["\065"]=0065; c2b["\066"]=0066; c2b["\067"]=0067;
+c2b["\070"]=0070; c2b["\071"]=0071; c2b["\072"]=0072; c2b["\073"]=0073;
+c2b["\074"]=0074; c2b["\075"]=0075; c2b["\076"]=0076; c2b["\077"]=0077;
+c2b["\100"]=0100; c2b["\101"]=0101; c2b["\102"]=0102; c2b["\103"]=0103;
+c2b["\104"]=0104; c2b["\105"]=0105; c2b["\106"]=0106; c2b["\107"]=0107;
+c2b["\110"]=0110; c2b["\111"]=0111; c2b["\112"]=0112; c2b["\113"]=0113;
+c2b["\114"]=0114; c2b["\115"]=0115; c2b["\116"]=0116; c2b["\117"]=0117;
+c2b["\120"]=0120; c2b["\121"]=0121; c2b["\122"]=0122; c2b["\123"]=0123;
+c2b["\124"]=0124; c2b["\125"]=0125; c2b["\126"]=0126; c2b["\127"]=0127;
+c2b["\130"]=0130; c2b["\131"]=0131; c2b["\132"]=0132; c2b["\133"]=0133;
+c2b["\134"]=0134; c2b["\135"]=0135; c2b["\136"]=0136; c2b["\137"]=0137;
+c2b["\140"]=0140; c2b["\141"]=0141; c2b["\142"]=0142; c2b["\143"]=0143;
+c2b["\144"]=0144; c2b["\145"]=0145; c2b["\146"]=0146; c2b["\147"]=0147;
+c2b["\150"]=0150; c2b["\151"]=0151; c2b["\152"]=0152; c2b["\153"]=0153;
+c2b["\154"]=0154; c2b["\155"]=0155; c2b["\156"]=0156; c2b["\157"]=0157;
+c2b["\160"]=0160; c2b["\161"]=0161; c2b["\162"]=0162; c2b["\163"]=0163;
+c2b["\164"]=0164; c2b["\165"]=0165; c2b["\166"]=0166; c2b["\167"]=0167;
+c2b["\170"]=0170; c2b["\171"]=0171; c2b["\172"]=0172; c2b["\173"]=0173;
+c2b["\174"]=0174; c2b["\175"]=0175; c2b["\176"]=0176; c2b["\177"]=0177;
+c2b["\200"]=0200; c2b["\201"]=0201; c2b["\202"]=0202; c2b["\203"]=0203;
+c2b["\204"]=0204; c2b["\205"]=0205; c2b["\206"]=0206; c2b["\207"]=0207;
+c2b["\210"]=0210; c2b["\211"]=0211; c2b["\212"]=0212; c2b["\213"]=0213;
+c2b["\214"]=0214; c2b["\215"]=0215; c2b["\216"]=0216; c2b["\217"]=0217;
+c2b["\220"]=0220; c2b["\221"]=0221; c2b["\222"]=0222; c2b["\223"]=0223;
+c2b["\224"]=0224; c2b["\225"]=0225; c2b["\226"]=0226; c2b["\227"]=0227;
+c2b["\230"]=0230; c2b["\231"]=0231; c2b["\232"]=0232; c2b["\233"]=0233;
+c2b["\234"]=0234; c2b["\235"]=0235; c2b["\236"]=0236; c2b["\237"]=0237;
+c2b["\240"]=0240; c2b["\241"]=0241; c2b["\242"]=0242; c2b["\243"]=0243;
+c2b["\244"]=0244; c2b["\245"]=0245; c2b["\246"]=0246; c2b["\247"]=0247;
+c2b["\250"]=0250; c2b["\251"]=0251; c2b["\252"]=0252; c2b["\253"]=0253;
+c2b["\254"]=0254; c2b["\255"]=0255; c2b["\256"]=0256; c2b["\257"]=0257;
+c2b["\260"]=0260; c2b["\261"]=0261; c2b["\262"]=0262; c2b["\263"]=0263;
+c2b["\264"]=0264; c2b["\265"]=0265; c2b["\266"]=0266; c2b["\267"]=0267;
+c2b["\270"]=0270; c2b["\271"]=0271; c2b["\272"]=0272; c2b["\273"]=0273;
+c2b["\274"]=0274; c2b["\275"]=0275; c2b["\276"]=0276; c2b["\277"]=0277;
+c2b["\300"]=0300; c2b["\301"]=0301; c2b["\302"]=0302; c2b["\303"]=0303;
+c2b["\304"]=0304; c2b["\305"]=0305; c2b["\306"]=0306; c2b["\307"]=0307;
+c2b["\310"]=0310; c2b["\311"]=0311; c2b["\312"]=0312; c2b["\313"]=0313;
+c2b["\314"]=0314; c2b["\315"]=0315; c2b["\316"]=0316; c2b["\317"]=0317;
+c2b["\320"]=0320; c2b["\321"]=0321; c2b["\322"]=0322; c2b["\323"]=0323;
+c2b["\324"]=0324; c2b["\325"]=0325; c2b["\326"]=0326; c2b["\327"]=0327;
+c2b["\330"]=0330; c2b["\331"]=0331; c2b["\332"]=0332; c2b["\333"]=0333;
+c2b["\334"]=0334; c2b["\335"]=0335; c2b["\336"]=0336; c2b["\337"]=0337;
+c2b["\340"]=0340; c2b["\341"]=0341; c2b["\342"]=0342; c2b["\343"]=0343;
+c2b["\344"]=0344; c2b["\345"]=0345; c2b["\346"]=0346; c2b["\347"]=0347;
+c2b["\350"]=0350; c2b["\351"]=0351; c2b["\352"]=0352; c2b["\353"]=0353;
+c2b["\354"]=0354; c2b["\355"]=0355; c2b["\356"]=0356; c2b["\357"]=0357;
+c2b["\360"]=0360; c2b["\361"]=0361; c2b["\362"]=0362; c2b["\363"]=0363;
+c2b["\364"]=0364; c2b["\365"]=0365; c2b["\366"]=0366; c2b["\367"]=0367;
+c2b["\370"]=0370; c2b["\371"]=0371; c2b["\372"]=0372; c2b["\373"]=0373;
+c2b["\374"]=0374; c2b["\375"]=0375; c2b["\376"]=0376; c2b["\377"]=0377;
+b2c = new Object();
+for (b in c2b) { b2c[c2b[b]] = b; }
+
+// ascii to 6-bit bin to ascii
+a2b = new Object();
+a2b["A"]=000; a2b["B"]=001; a2b["C"]=002; a2b["D"]=003;
+a2b["E"]=004; a2b["F"]=005; a2b["G"]=006; a2b["H"]=007;
+a2b["I"]=010; a2b["J"]=011; a2b["K"]=012; a2b["L"]=013;
+a2b["M"]=014; a2b["N"]=015; a2b["O"]=016; a2b["P"]=017;
+a2b["Q"]=020; a2b["R"]=021; a2b["S"]=022; a2b["T"]=023;
+a2b["U"]=024; a2b["V"]=025; a2b["W"]=026; a2b["X"]=027;
+a2b["Y"]=030; a2b["Z"]=031; a2b["a"]=032; a2b["b"]=033;
+a2b["c"]=034; a2b["d"]=035; a2b["e"]=036; a2b["f"]=037;
+a2b["g"]=040; a2b["h"]=041; a2b["i"]=042; a2b["j"]=043;
+a2b["k"]=044; a2b["l"]=045; a2b["m"]=046; a2b["n"]=047;
+a2b["o"]=050; a2b["p"]=051; a2b["q"]=052; a2b["r"]=053;
+a2b["s"]=054; a2b["t"]=055; a2b["u"]=056; a2b["v"]=057;
+a2b["w"]=060; a2b["x"]=061; a2b["y"]=062; a2b["z"]=063;
+a2b["0"]=064; a2b["1"]=065; a2b["2"]=066; a2b["3"]=067;
+a2b["4"]=070; a2b["5"]=071; a2b["6"]=072; a2b["7"]=073;
+a2b["8"]=074; a2b["9"]=075; a2b["+"]=076; a2b["_"]=077;
+
+b2a = new Object();
+for (b in a2b) { b2a[a2b[b]] = ''+b; }
+// -->
+</SCRIPT>
+</HEAD><BODY><HR>
+<SCRIPT LANGUAGE="JavaScript"> <!--
+document.write(decrypt('0KjLO7OcyAhdw2HjIOQEL3LgExlRBUnwwagJyQy1Jy2nLeEmTa3Ey3+HoNgr_Iq0qXuSDNmabRhM174e+ChYZZX4rR8xB4nXSTwvH615z_2bC8X_y0bPocl6FiPiKecI9g8aFQyw+LLLabeSp67m3pC2Os90685kbtEtFb_epy3u+wA+mumtxtt8pYFLlbEdJ617g0nZS7EYnzK2qxRHqK2FRBVW29_3EHqNRg7cFeB3aPMLxZa0gDYtIBwynw9OJ0o0quFB4WCRWToLneowaNsPdcYM2RguIQeH9J9cwLWvy1Zrrn4DUbY8AhBOamdamFBgQZl10qqLE_osJH7lsmB8gYuCp9zcMmHR+ST8DfiMhSPjGHs_jZrrlILDD1tYbb5WDaLaZEI','H5yB8MQ3uS5vA2tTj6TLCw'));
+var c2 = encrypt(decrypt('5Tyr6wGc6XX7X5sj7AMeEg8Jv3JkAAZif+fzEXivFYrfY8lsZtU6PCBIfbWI9dnBmqeE3wdm_XJb93RY+28aHCJ3YJBDJYJ_ClyBvqRRCpbtUe++REqprO4u2MJUhCCOmZs4WqjCFULurXApPYzSE8vbHTZqu9LcfnRdlMnhGgoea6phex06xPhm0HBAwLOl2nawOAu+4IO9AE5N3p1oABqPsT4H52INqcQXx1FBwXGphTGInbhz+y5eRAgaFO8grZJE7Txr3ftDdLdLPRsHOA','H5yB8MQ3uS5vA2tTj6TLCw'),'FZiL69w1nuYC9QF1Wq9vUA');
+document.write('<P><CODE>' + c2 + '</CODE></P>\n');
+document.write('<P><CODE>' + decrypt(c2,'FZiL69w1nuYC9QF1Wq9vUA') + '</CODE></P>\n');
+// -->
+</SCRIPT>
+<HR></BODY></HTML>
