@@ -3,3 +3,4 @@
 20020310 Crypt-Tea-1.32
 20020325 Crypt-Tea-1.33 Bug fixed in JS ascii decoding
 20020403 Crypt-Tea-1.34 Htauth hooks removed into CGI::Htauth.pm
+20020523 Crypt-Tea-1.35 mv Tea.raw Tea.pm for CPAN, include test.html
